Bookmarks popover should only connect to tag changes once per bookmark

Currently, the EphyBookmarksPopover connects to tag added/removed
signals on each EphyBookmark once for each EphyBookmarksRow that is
created for this bookmark. Usually that is exactly two, once for the All
view and once for the Tags view, but it can be three during an
intermediate state when adding a tag when the tag has just been added to
the Tags subview and not yet removed from the Tags main view. At any
rate, it should not be connected two or three times, it should be
connected once. So have EphyBookmarksManager emit these notifications
and get them from it instead, irrespective of the number of
EphyBookmarksRows that have been created.

https://bugzilla.gnome.org/show_bug.cgi?id=772131